[package]
name = "phlow-derive"
version = "1.1.0"
edition = "2021"
authors = ["feenk gmbh <contact@feenk.com>"]
repository = "https://github.com/feenkcom/phlow-rs/tree/main/phlow-derive"
license = "MIT"
keywords = ["phlow", "meta", "reflection"]
description = "A helper derive crate to create new phlow extensions"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = [ "full", "extra-traits" ] }