[package]
name = "phlow-extensions"
version = "1.2.0"
edition = "2021"
authors = ["feenk gmbh <contact@feenk.com>"]
repository = "https://github.com/feenkcom/phlow-rs/tree/main/phlow"
license = "MIT"
keywords = ["phlow", "meta", "reflection"]
description = "Phlow extensions to Rust's core structures"

[dependencies]
phlow = { version = "=1.2.0", features = [ "phlow-derive" ], path = "../phlow" }

[dev-dependencies]
phlow = { version = "1", features = [ "phlow-derive" ], path = "../phlow" }