[package]
name = "phlow-extensions"
version = "2.0.0"
edition = "2021"
authors = ["feenk gmbh <contact@feenk.com>"]
repository = "https://github.com/feenkcom/phlow-rs/tree/main/phlow"
license = "MIT"
keywords = ["phlow", "meta", "reflection"]
description = "Phlow extensions to Rust's core structures"

[dependencies]
phlow = { version = "^2.0", path = "../phlow" }

[dev-dependencies]
phlow = { version = "2", path = "../phlow" }