[package]
name = "phlow-server"
version = "1.4.0"
authors = ["feenk gmbh <contact@feenk.com>"]
repository = "https://github.com/feenkcom/phlow-rs/tree/main/phlow-server"
edition = "2021"
license = "MIT"
keywords = ["phlow","meta", "rest"]
description = "Provides Phlow HTTP/REST API to inspect running systems"

[dependencies]
phlow = { version = "1.4", features = [ "phlow-derive", "view-specification", "object-id", "printing" ] }
phlow-extensions = { version = "1.4" }
warp = { version = "0.3" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
parking_lot = "0.12"
uuid = "1.5"