[package]
name = "phlow"
version = "0.1.0"
edition = "2021"
authors = ["feenk gmbh <contact@feenk.com>"]
repository = "https://github.com/feenkcom/phlow-rs/tree/main/phlow"
license = "MIT"
keywords = ["phlow", "meta", "reflection"]
description = "An engine for scripting reactive browsers in Rust by adding custom views to structures"

[dependencies]
phlow-derive = { version = "=1.0.0", optional = true, path = "../phlow-derive" }

[dev-dependencies]
phlow-derive = { version = "1.0", path = "../phlow-derive" }

[features]
default = [ "printing" ]
printing = [ ]