[package]
name = "phlow"
version = "1.3.2"
edition = "2021"
authors = ["feenk gmbh <contact@feenk.com>"]
repository = "https://github.com/feenkcom/phlow-rs/tree/main/phlow"
license = "MIT"
keywords = ["phlow", "meta", "reflection"]
description = "An engine for scripting reactive browsers in Rust by adding custom views to structures"

[dependencies]
phlow-derive = { version = "1.3", optional = true, path = "../phlow-derive" }
log = "0.4"

[dev-dependencies]
phlow-derive = { version = "1", path = "../phlow-derive" }

[features]
default = [ "printing" ]
printing = [ ]