[package]
name = "phlow"
version = "1.6.0"
edition = "2021"
authors = ["feenk gmbh <contact@feenk.com>"]
repository = "https://github.com/feenkcom/phlow-rs/tree/main/phlow"
license = "MIT"
keywords = ["phlow", "meta", "reflection"]
description = "An engine for scripting reactive browsers in Rust by adding custom views to structures"

[dependencies]
phlow-derive = { version = "1.4", optional = true, path = "../phlow-derive" }
log = "0.4"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_repr = { version = "0.1", optional = true }
erased-serde = { version = "0.3", optional = true }
typetag = { version = "0.2", optional = true }
unique_id = { version = "0.1", optional = true }

[dev-dependencies]
phlow-derive = { version = "1", path = "../phlow-derive" }

[features]
default = [ "printing", "phlow-derive" ]
phlow-derive = ["dep:phlow-derive"]
printing = []
object-id = ["dep:unique_id"]
view-specification = ["dep:serde", "dep:serde_repr", "dep:erased-serde", "dep:typetag"]